# ps-api

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  spec.yaml  sqlx-data.json
.github/workflows/: general.yml  scheduled-audit.yml
.sqlx/: query-1152abd0d27e6c6fd45ed862c940400e09e0a9eb11eeef2aeb29f479d9a15076.json  query-2522f7a51a1b4ccaf44bb48216549350718aa12c433a9142c0a60f3c81516a28.json  query-3064bb964f8e3a836da35aefd11d325cc36564776e444d674bd2e2f7aba58969.json  query-30662053c262aabcadd90636805b5c30ce8145aa76d96c6469c04e14c653270d.json  query-376b2b0dd2d38bb07c0c87f6bfdf8b459e44fc378bf6ab95bb36f9cd0d68074d.json  query-569527c5c0423025018714cbd2f7395e7191ef1a9a69ec4ed24cfc43b034d3a9.json  query-5fd9d7b7c956a3000fea86d3ee28c5e838878484f67c7ddc6a7d0a6238ae474c.json  query-86384d74e2cbc665d79414ef9dffd21a31f2a0a64eedc5387d35142b63b3169a.json  query-8ab9e7fbdf096c49839619833d6124d3aedab1ff42c3f9ae6a70be30adad217a.json  query-b3f139c6775c53386eebe9c4b335ed520737259139007c313f837fb45da49d0f.json  query-bc3f75a78c76277aa41913dd9190700e058a04430e89f5d61023d12b1bece1a3.json  query-c14ad9a143a3860ca30aef91a376e11a59df858f2dd52173305a2ba77c4a7d94.json  query-c326dffcdedead78e768107956edf15f8dc8c6619574671480689829c2ad625e.json  query-e21e0afe3dc2a78bc8c6a402a63a1da64894ac242b4cf5bbbadcf3cb2aa3ef56.json  query-ea5eadd0116d5d45530d784d9657c0f62ae0e57d7bdf407e744c92beb5b700ed.json  query-fc7aca8a6b90302b435d149ea4917beac0c35987d06aee881d820f774395cf63.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20220303115606_create_users_table.sql  20220323190537_create_patterns_table.sql  20220413082433_create_activation_tokens_table.sql  20220424164131_create_reset_password_tokens_table.sql  20240522140602_create_patterns_tb303_table.sql  20240527152429_steps_tb303.sql
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  email_client.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: mod.rs
src/domain/patterns/: author.rs  device.rs  efx_notes.rs  knob.rs  mod.rs  new_pattern.rs  new_tb303_pattern copy.rs  new_tb303_pattern.rs  new_tb303_step.rs  note.rs  number.rs  pattern_data.rs  pattern_name.rs  pattern_request.rs  stem.rs  time.rs  title.rs  waveform.rs
src/domain/users/: mod.rs  new_user.rs  user.rs  user_email.rs  user_name.rs  user_password.rs
src/routes/: health_check.rs  mod.rs
src/routes/auth/: change_password.rs  login.rs  request_password_reset.rs  signup.rs  signup_activate.rs  signup_activate_resend.rs
src/routes/patterns/: mod.rs  post.rs  post_tb303.rs
tests/api/: health_check.rs  helpers.rs  main.rs  patterns.rs
tests/api/auth/: change_password.rs  login.rs  mod.rs  request_password_reset.rs  signup.rs  signup_activate.rs  signup_activate_resend.rs
tests/api/patterns/: mod.rs  post_303_pattern.rs  post_pattern_tb303.rs
