[package]
name = "ps-api"
version = "0.1.0"
authors = ["db303 <nelegalus@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ps-api"

[dependencies]
actix-web = "4.0.1"
tokio = { version = "1", features = ["macros"] }
serde = "1.0.115"
config = { version = "0.10.1", default-features = false, features = ["yaml"] }
sqlx = { version = "0.5.1", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline", "json"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
chrono = "0.4.19"
log = "0.4"
tracing = "0.1.32"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.1"
thiserror = "1.0.24"
serde-aux = "1.0.1"
unicode-segmentation = "1.7.1"
validator = "0.12.0"
rand = { version = "0.8", features= ["std_rng"] }
tracing-actix-web = "0.5.0-beta.6"
anyhow = "1.0.40"
base64 = "0.13.0"
argon2 = { version = "0.3", features = ["std"] }
serde_json = "1.0.73"
secrecy = { version = "0.8", features = ["serde"] }
fancy-regex = "0.8"
actix-web-lab = "0.15"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.actix-session]
git = "https://github.com/LukeMathWalker/actix-extras"
branch = "rework-actix-session"
features = ["redis-rs-tls-session"]

[dev-dependencies]
once_cell = "1.7.2"
claim = "0.4.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3.0"
wiremock = "0.5"
serde_json = "1.0.61"
linkify = "0.5.0"

