[package]
name = "ps-api"
version = "0.1.0"
authors = ["db303 <nelegalus@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ps-api"

[dependencies]
actix-web = "4.5.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.115"
config = { version = "0.14", default-features = false, features = ["yaml"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4.34"
reqwest = { version = "0.11.24", default-features = false, features = ["json", "rustls-tls", "cookies"] }
log = "0.4"
tracing = "0.1.32"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.1"
thiserror = "1.0.24"
serde-aux = "1.0.1"
unicode-segmentation = "1.7.1"
validator = "0.12.0"
rand = { version = "0.8", features= ["std_rng"] }
tracing-actix-web = "0.5.0-beta.6"
anyhow = "1.0.40"
base64 = "0.21.0"
argon2 = { version = "0.4", features = ["std"] }
serde_json = "1.0.73"
secrecy = { version = "0.8", features = ["serde"] }
fancy-regex = "0.8"
actix-web-lab = "0.15"
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }


[dev-dependencies]
once_cell = "1.7.2"
claims = "0.7"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3.0"
wiremock = "0.5"
serde_json = "1.0.61"
linkify = "0.5.0"

