[package]
name = "ps-api"
version = "0.1.0"
authors = ["db303 <patternsaver@protonmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ps-api"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
serde = "1.0.210"
config = { version = "0.14", default-features = false, features = ["yaml"] }
sqlx = { version = "0.8.2", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "json"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = "0.4.38"
reqwest = { version = "0.12.8", default-features = false, features = ["json", "rustls-tls", "cookies"] }
log = "0.4.22"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
thiserror = "1.0.64"
serde-aux = "4.5.0"
unicode-segmentation = "1.12.0"
validator = "0.18.1"
rand = { version = "0.8.4", features = ["std_rng"] }
tracing-actix-web = "0.7.14"
anyhow = "1.0.90"
base64 = "0.22.1"
argon2 = { version = "0.6.0-pre.1", features = ["std"] }
serde_json = "1.0.132"
fancy-regex = "0.13.0"
actix-web-lab = "0.22.0"
actix-session = { version = "0.10.1", features = ["redis-session-rustls"] }
utoipa = { version = "5.1.1", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "8.0.1", features = ["actix-web"] }
secrecy = { version = "0.10.3", features = ["serde"] }

[dev-dependencies]
once_cell = "1.20.2"
claims = "0.7.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
fake = "2.10.0"
wiremock = "0.6.2"
serde_json = "1.0.132"
linkify = "0.10.0"

